# prasino

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Log.cpp  Log.h  Material.cpp  Material.h  Model.cpp  Model.h  PAG2122.sln  PAR2122.vcxproj  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Source.cpp  Tetrahedron.cpp  Tetrahedron.h  Triangle.cpp  Triangle.h  main.cpp  pag03-fs.glsl  pag03-vs.glsl  pag06-fs.glsl  pag06-vs.glsl  pag07-vs.glsl  pag08-fs.glsl  pag08-light-fs.glsl  pag08-vs.glsl  pch.h
models/: ChessKnight.mtl  ChessQueen.mtl
src/: CMakeLists.txt  Camera.cpp  Camera.cpp~Updated upstream  Camera.h  Camera.h~Updated upstream  Light.cpp  Light.h  Log.cpp  Log.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.cpp~Updated upstream  Shader.h  Shader.h~Updated upstream  ShaderProgram.cpp  ShaderProgram.cpp~Updated upstream  ShaderProgram.h  Texture.cpp  Texture.h  main.cpp  main.cpp~Updated upstream  pag07-fs.glsl  pag08-fs.glsl  pag08-light-fs.glsl  pag08-vs.glsl  pag09-fs-tex.glsl  pag09-fs.glsl  pag09-vs.glsl  pag10-fs-nm-tex.glsl  pag10-fs-tex.glsl  pag10-fs.glsl  pag10-shadow-fs.glsl  pag10-shadow-vs.glsl  pag10-vs-nm.glsl  pag10-vs.glsl  pch.h
src/shaders/: frag.glsl  vertex_nm.glsl
